# hidropluvial

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROMPT_INICIO_SESION.md  README.md  hidropluvial.iss  hidropluvial.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml
assets/: README.md
docs/: CLI.md  CODIGOS_INTERNOS.md  COEFICIENTES.md  DESARROLLO.md  DISTRIBUCION.md  INSTALACION.md  MANUAL_USUARIO.md  METODOLOGIAS.md  PLAN_REFACTORIZACION.md  SESIONES.md  SPEC.md  SPEC_seccion_2.2_Uruguay_IDF.md  WIZARD.md  diseño_tablas_personalizables.md  guia_graficos.md
docs/internal/: DESARROLLO.md  DISTRIBUTION_PLAN.md  WEBAPP_SPEC.md  manual.tex
docs/metodologias/: README.md  hydrograph.md  idf.md  runoff.md  storms.md  tc.md
examples/: cuenca_ejemplo.yaml  hidrogramas_comp.tex  hidrogramas_con_MCE.tex  hyetogram.tex
examples/reporte_fichas/: cuenca_las_piedras_memoria.tex  document.tex  hidrograma_desbordes_gz_Tr10_X100.tex  hidrograma_desbordes_gz_Tr2_X100.tex  hidrograma_desbordes_gz_Tr2_X125.tex  hidrograma_kirpich_blocks24_Tr10.tex  hidrograma_kirpich_blocks24_Tr25.tex  hidrograma_kirpich_blocks_Tr25.tex  sec_cuenca.tex  sec_tc.tex  (+17 more)
scripts/: build_exe.py  populate_test_db.py
tests/: conftest.py  test_charts.py  test_cli_basin_analysis.py  test_cli_formatters.py  test_cli_hydrograph.py  test_cli_idf.py  test_cli_runoff.py  test_cli_session.py  test_cli_storm.py  test_cli_tc.py  test_coefficient_loader.py  test_coefficients.py  test_database.py  test_hydrograph.py  test_idf.py  test_idf_uruguay.py  test_integration.py  test_project.py  test_reports_compiler.py  test_reports_palettes.py  test_runoff.py  test_session.py  test_tc.py  test_temporal.py  test_temporal_dinagua.py  test_wizard.py  test_wizard_workflows.py
(+235 files in other folders)
