[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hidropluvial"
version = "0.1.0"
description = "Herramienta Python para cálculos hidrológicos con generación de reportes LaTeX"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "HidroPluvial Team" }
]
keywords = ["hydrology", "IDF", "runoff", "hydrograph", "SCS", "LaTeX"]

[project.urls]
Homepage = "https://github.com/guilleecha/hidropluvial"
Documentation = "https://github.com/guilleecha/hidropluvial#readme"
Repository = "https://github.com/guilleecha/hidropluvial.git"
Issues = "https://github.com/guilleecha/hidropluvial/issues"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0.0",
    "plotext>=5.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
hidropluvial = "hidropluvial.cli:app"
hp = "hidropluvial.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hidropluvial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
